--- a/index.html
+++ b/index.html
@@ -4,4 +4,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <button id="option1"></button>
+    <button id="option1"></button>
+    <button id="option1"></button>
+    <button id="option1"></button>
+    <script src="main.js"></script>
   </body>
