--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+    <h1>Copenhagen</h1>
+    <h3>by Alex Liu</h3>
+    <button id="start" onclick="">Start</button>
     <button id="option1"></button>
-    <button id="option1"></button>
-    <button id="option1"></button>
-    <button id="option1"></button>
+    <button id="option2"></button>
+    <button id="option3"></button>
+    <button id="option4"></button>
     <script src="main.js"></script>
   </body>
