--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1>Copenhagen</h1>
+    <h1 id="title">Copenhagen</h1>
     <br>
-    <h3>by Alex Liu</h3>
+    <h3 id="author">by Alex Liu</h3>
     <button id="start" onclick="">Start</button>
     <button id="option1"></button>
     <button id="option2"></button>
