--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <h1 id="title">Copenhagen</h1>
     <br>
     <h3 id="author">by Alex Liu</h3>
-    <button id="start" onclick="">Start</button>
+    <button id="start" onclick="main()">Start</button>
     <button id="option1"></button>
     <button id="option2"></button>
     <button id="option3"></button>
