--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
     <h1 id="title">Copenhagen</h1>
     <br>
     <h3 id="author">by Alex Liu</h3>
-    <button id="start" onclick="main()">Start</button>
+    <button id="startbutton" onclick="main()">Start</button>
     <button id="option1"></button>
     <button id="option2"></button>
     <button id="option3"></button>
     <button id="option4"></button>
+    <div id="info1">
+      <p>
+        Copenhagen is the capital city of Denmark. 
+      </p>
+    </div>
     <script src="main.js"></script>
   </body>
 </html>
